# ai-user-activity-monitor

./: .gitignore  .safety-project.ini  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  admin.py  apps.py  conf.py  context_processors.py  middleware.py  models.py  pyproject.toml  pytest.ini  registry.py  reports.py  requirements-dev.txt  requirements.txt  services.py  signals.py  urls.py  utils.py  views.py
.github/workflows/: django.yml  python-package-conda.yml  python-package.yml
docs/screenshots/: README.md  preview-dashboard.html  preview-user-list.html
management/commands/: backfill_activity.py
migrations/: 0001_initial.py  0002_useractivitylog_city_useractivitylog_country_and_more.py  0003_useractivitylog_duration_seconds_and_more.py
scripts/: capture_screenshots.py
templates/activity/: _opensource_footer.html  _page_time_tracker.html  _seo_head.html  dashboard_user_detail.html  dashboard_user_list.html  license.html  user_activity_dashboard.html
templatetags/: activity_extras.py
tests/: settings.py  test_activity.py
