[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-user-activity-monitor"
version = "1.0.2"
description = "AI User Activity Monitor — open-source Django user activity dashboard by Nitesh Kumar Singh (nkscoder)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nitesh Kumar Singh", email = "contact@nkscoder.in" },
]
maintainers = [
    { name = "nkscoder", email = "contact@nkscoder.in" },
]
keywords = [
    "django",
    "user-activity",
    "activity-monitor",
    "analytics",
    "dashboard",
    "ai",
    "nkscoder",
    "Nitesh Kumar Singh",
    "open-source",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.2",
    "openpyxl>=3.1",
]

[project.urls]
Homepage = "https://github.com/nkscoder/ai-user-activity-monitor"
Documentation = "https://github.com/nkscoder/ai-user-activity-monitor#readme"
Repository = "https://github.com/nkscoder/ai-user-activity-monitor"
"Bug Tracker" = "https://github.com/nkscoder/ai-user-activity-monitor/issues"
"PyPI Profile" = "https://pypi.org/user/nkscoder/"
"Author Website" = "https://nkscoder.in"
"Author GitHub" = "https://github.com/nkscoder"
"LinkedIn" = "https://www.linkedin.com/in/nitesh-kumar-singh-897437a2/"

[project.optional-dependencies]
dev = ["pytest-django", "build", "twine"]

[tool.setuptools]
package-dir = { "activity" = "." }
packages = [
    "activity",
    "activity.management",
    "activity.management.commands",
    "activity.migrations",
    "activity.templatetags",
]

[tool.setuptools.package-data]
activity = [
    "templates/activity/**/*",
    "templatetags/*.py",
    "migrations/*.py",
]
